# frinx_python_sdk

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: pr-check.yml  pypi-publish.yml
examples/: README.md  main.py
examples/workflows/: post_to_slack.py
frinx/client/: conductor.py  frinx_conductor_wrapper.py
frinx/common/: conductor_enums.py  frinx_rest.py  import_workflows.py  type_aliases.py  util.py
frinx/common/graphql/: client.py  graphql_types.py  schema_converter.py
frinx/common/telemetry/: common.py  metrics.py  settings.py
frinx/common/worker/: service.py  task.py  task_def.py  task_result.py  worker.py
frinx/common/workflow/: task.py  workflow.py
frinx/services/: cli_network_topology.py  connection_manager.py  snapshot_manager.py  uniconfig_manager.py
frinx/services/http/: http_worker.py
frinx/services/inventory/: inventory_worker.py  templates.py  utils.py
frinx/services/uniconfig/: cli_network_topology.py  connection_manager.py
frinx/workers/: cli_network_topology.py  connection_manager.py  snapshot_manager.py  uniconfig_manager.py
frinx/workers/http/: http_worker.py
frinx/workers/inventory/: inventory_worker.py  operations.py
frinx/workers/schellar/: schellar_worker.py
frinx/workers/test/: test_worker.py
frinx/workers/uniconfig/: cli_network_topology.py  connection_manager.py  snapshot_manager.py  uniconfig_manager.py
frinx/workflows/inventory/: inventory_workflows.py
frinx/workflows/schellar/: schellar_workflows.py
test/common_test/worker_test/: test_task_def.py
test/common_test/workflow_test/: test_task_generator.py  test_workflow_operator.py
tests/: conftest.py
tests/common_test/worker_test/: test_task_def.py
tests/common_test/workflow_test/: test_task_generator.py  test_workflow_generator.py
tests/unit_tests/: conftest.py
tests/unit_tests/common_test/graphql_test/: model.py  schema.json  test_graphql_generator.py
tests/unit_tests/common_test/worker_test/: test_task_def.py
tests/unit_tests/common_test/workflow_test/: test_task_generator.py  test_workflow_generator.py
